k8s-manifests/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: roohmeiy/twsthreetierapp-backend  # Replace with your actual backend image
          ports:
            - containerPort: 3500
