k8s-manifests/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image:  roohmeiy/twsthreetierapp-frontend  # Replace with your actual frontend image
          ports:
            - containerPort: 3000
