k8s-manifests/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3500
      targetPort: 3500
  type: ClusterIP
